# rustcroft-voice-client

./: Cargo.toml  README.md
src/: main.rs  mycroft_stt.rs  precise.rs
