[package]
name = "rust-voice-client"
version = "0.1.0"
authors = ["Åke Forslund <ake.forslund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = {version = "1.0.130", features = ["derive"]}
portaudio-rs = "0.3.2"
bincode = "1.3.3"
bitvec = "1.0.0"
flacenc = { path = "../flacenc-rs" }
reqwest = { version = "*", features = ["native-tls", "blocking"] }
rustcroft = { git = "https://github.com/forslund/rustcroft", branch = "main" }
websocket = { version = "0.26.5" }
